litellm/litellm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
spec:
  selector:
    matchLabels:
      app: litellm
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
      - name: litellm-container
        image: ghcr.io/berriai/litellm:main-latest   
        volumeMounts:
        - name: litellm-config-volume
          mountPath: /etc/config
        args: [ "--port", "$(PORT)" , "--config", "/etc/config/litellmProxyConfig",]
        ports:
        - containerPort: 4001
      volumes:
        - name: litellm-config-volume
          configMap:
            name: litellm-config
            items:
            - key: LITELLM-PROXY-CONFIG
              path: litellmProxyConfig
